--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Todo app",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx webpack --watch; ",
+    "build": "npx webpack",
+    "serve": "npx webpack serve --open"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +16,7 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.3",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
